@@ -1,4 +1,3 @@
-
 static final int TEST_SIZE = 100000;
 static final int OFFSET = 1000000;
 static long time1, time2, totaltime;   // These get set by the testing routine
@@ -27,7 +26,7 @@ static <E extends Comparable<E>> boolean checkBST(BSTNode<E> rt, Vector<E> sorte
 
 public static void main(String args[]) throws IOException {
   // Create a useFile to record errors if necessary
-  record = new ErrorRec(useFile, "BST");
+  record = new ErrorRec("BST", useFile);
   // Create an array that stores random numbers
   Integer[] A = new Integer[TEST_SIZE];
   int i;
@@ -41,15 +40,15 @@ public static void main(String args[]) throws IOException {
   for (i=0; i<A.length; i++)
     A[i] = i;
   // Now, generate a permutation on the numbers
-  permute(A);
+  Permute.permute(A);
 
   // Now, build the BST
   // Each record will have a random key value from the permutation.
   // Since we actually store KVPairs, we will give it a "data" value
   // that is simply the count + OFFSET (so we can distinguish "data" from keys)
   for (i=0; i<A.length; i++) {
-    b.insert(new KVPair<Integer,Integer>(new Integer(A[i]), new Integer(i + OFFSET)));
-  	sortedPair.add(new KVPair<Integer, Integer>(new Integer(A[i]), new Integer(i + OFFSET)));
+    b.insert(new KVPair<Integer,Integer>(Integer.valueOf(A[i]), Integer.valueOf(i + OFFSET)));
+  	sortedPair.add(new KVPair<Integer, Integer>(Integer.valueOf(A[i]), Integer.valueOf(i + OFFSET)));
   }
   
   // Sort the KVPairs
@@ -60,9 +59,9 @@ public static void main(String args[]) throws IOException {
   }
 
   // Now, let's test delete by randomly removing all the keys
-  permute(A);
+  Permute.permute(A);
   for (i=0; i<A.length; i++) {
-    KVPair<Integer,Integer> key = new KVPair<Integer,Integer>(new Integer(A[i]), null);
+    KVPair<Integer,Integer> key = new KVPair<Integer,Integer>(Integer.valueOf(A[i]), null);
     KVPair<Integer,Integer> k = b.remove(key);
     if (b.size() != (TEST_SIZE - i - 1)) {
     	record.printError("Oops! Wrong size. Should be " + (TEST_SIZE - i - 1) + " and it is " + b.size());
@@ -73,10 +72,10 @@ public static void main(String args[]) throws IOException {
   }
 
   // Now we are going to run timing tests on our two traversals
-  permute(A);
+  Permute.permute(A);
   BST<KVPair<Integer,Integer>> btest = new BST<KVPair<Integer,Integer>>();
   for (i=0; i<A.length; i++)
-    btest.insert(new KVPair<Integer,Integer>(new Integer(A[i]), new Integer(i + OFFSET)));
+    btest.insert(new KVPair<Integer,Integer>(Integer.valueOf(A[i]), Integer.valueOf(i + OFFSET)));
   time1 = System.currentTimeMillis();
   preorder(btest.root());
   time2 = System.currentTimeMillis();
@@ -98,16 +97,16 @@ public static void main(String args[]) throws IOException {
   // Ultimately, these are going to be our random keys
   int newlen = TEST_SIZE/10;
   for (i=0; i<AA.length; i++) {
-    AA[i] = random(newlen);
+    AA[i] = Permute.random(newlen);
     sortedInt.add(AA[i]);
   }
   // Now, generate a permutation on the numbers
-  permute(AA);
+  Permute.permute(AA);
 
   // Now, build the BST
   // Each record will have a random key value from the permutation.
   for (i=0; i<AA.length; i++)
-    bb.insert(new Integer(AA[i]));
+    bb.insert(Integer.valueOf(AA[i]));
 
   // Sort the vector
   Collections.sort(sortedInt);
